fix: update faq contents

--- a/index.html
+++ b/index.html
@@ -258,28 +258,28 @@
                 <span>+</span>
                 </button>
                 <div class="faq__answer mt-15">
-                  <p class="p-7">To reset your password, go to the login page and click on the "Forgot Password?" link. Enter your registered email address, and you'll receive a password reset link. Follow the instructions in the email to create a new password. If you don’t see the email, check your spam or junk folder!</p>
+                  <p class="p-7">You can log into the Beta app with the same details (email address/phone number and password) that you use to log into the live Clannit app. You can also create a new account via the “Create Account” button on the Login screen. After filling  in the necessary fields and selecting “Create Account”, enter the verification code that will be sent to your email to complete the signup process.</p>
                 </div>
                </div>
                <!--  -->
                <div class="faq-item">
                 <button class="faq__toggler">
-                 <span>When will the other features be released ?</span>
+                 <span>How to generate a one-time code?</span>
                 <span>+</span>
                 </button>
                 <div class="faq__answer mt-15">
-                  <p class="p-7">To reset your password, go to the login page and click on the "Forgot Password?" link. Enter your registered email address, and you'll receive a password reset link. Follow the instructions in the email to create a new password. If you don’t see the email, check your spam or junk folder!</p>
+                  <p class="p-7">To generate a one-time code, simply tap on the Guests icon, which will redirect you to the Guest screen. Fill in the details for your one-time invite and select the “Generate Access Code” button.</p>
                 </div>
                </div>
               
                <!--  -->
                <div class="faq-item">
                 <button class="faq__toggler">
-                 <span>How can I provide feedback, report a bug or give suggestions ?</span>
+                 <span>How can I provide feedback, report a bug or give suggestions?</span>
                 <span>+</span>
                 </button>
                 <div class="faq__answer mt-15">
-                  <p class="p-7">To reset your password, go to the login page and click on the "Forgot Password?" link. Enter your registered email address, and you'll receive a password reset link. Follow the instructions in the email to create a new password. If you don’t see the email, check your spam or junk folder!</p>
+                  <p class="p-7">Once you log into the app, there is a link at the top of the Feed page which reads “Click here to give your feedback”. Once selected, you will be redirected to a Google Forms page where you can provide feedback, report a bug and give suggestions.</p>
                 </div>
                </div>
               
@@ -290,10 +290,30 @@
                 <span>+</span>
                 </button>
                 <div class="faq__answer mt-15">
-                  <p class="p-7">To reset your password, go to the login page and click on the "Forgot Password?" link. Enter your registered email address, and you'll receive a password reset link. Follow the instructions in the email to create a new password. If you don’t see the email, check your spam or junk folder!</p>
+                  <p class="p-7">No, you don't have to uninstall the beta app to use the live app</p>
                 </div>
                </div>
   
+               <!--  -->
+               <div class="faq-item">
+                <button class="faq__toggler">
+                 <span class="">How can I revoke a code?</span>
+                <span>+</span>
+                </button>
+                <div class="faq__answer mt-15">
+                  <p class="p-7">To revoke a code, simply tap on the Guests icon, which will redirect you to the Guest screen. Select the Track Guest option, search for and select the invite you wish to revoke and pick the “Revoke Invite” option. </p>
+                </div>
+               </div>
+               <!--  -->
+               <div class="faq-item">
+                <button class="faq__toggler">
+                 <span class="">How Can I Change My Password?</span>
+                <span>+</span>
+                </button>
+                <div class="faq__answer mt-15">
+                  <p class="p-7">Log into the app and navigate to the Settings page by selecting the menu button on the top-left corner of your screen. On the Settings page, select the “Change Password” option, fill in the fields correctly and tap on the “Change Password” button.</p>
+                </div>
+               </div>
                <!--  -->
                <div class="faq-item">
                 <button class="faq__toggler">
@@ -301,7 +321,7 @@
                 <span>+</span>
                 </button>
                 <div class="faq__answer mt-15">
-                  <p class="p-7">To reset your password, go to the login page and click on the "Forgot Password?" link. Enter your registered email address, and you'll receive a password reset link. Follow the instructions in the email to create a new password. If you don’t see the email, check your spam or junk folder!</p>
+                  <p class="p-7">Yes. Once a code is generated via the beta app, the estate security will be able to check it in.</p>
                 </div>
                </div>
 
