fix: update faq contents

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
 
       <section class="join-beta__section">
         <div class="center join-beta__layout"> 
-          <h5 class="h-18">Ready to Join the Beta?</h5>
-          <p class="p-8 text-center max-width-888 mt-20">Sign up below to register your interest in the Clannit beta testing program. Selected participants will receive exclusive early access and have a direct line to our team for feedback. Help shape the platform that’s redefining community experiences!</p>
+          <h5 class="h-18">Clannit Beta Test is Live!</h5>
+          <p class="p-8 text-center max-width-888 mt-20">Click below to download the app now and start exploring! Over the next few weeks, you'll have exclusive access to our beta features and new functionalities. Your feedback will directly impact the platform's development and help shape the future of Clannit.</p>
           <div class="hero-icons mt-50">
              <div class="hero-icon">
               <img src="./assets/playstore.svg" alt="" />
