fix: update faq contents

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div>
           <h3 class="h-15 mb-20">Seamless Guest Invites & Tracking</h3>
           <p class="p-1 max-width-500 mb-40">
-            Easily invite guests to join your community with personalised invitations, and track their entry and exit with real-time insights. Whether you’re inviting one time guests or permanent guests our advanced guest tracking features give you full visibility and control, ensuring a secure and organised experience for all.
+            Easily invite guests to your gated community with personalised invitations, and track their entry and exit with real-time insights. Whether you’re inviting one time guests or multi-entry guests, our advanced guest tracking features give you full visibility and control, keeping your community secure and a well organised experience for all.
           </p>
 
         </div>
