fix: update faq contents

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <span class="bagde-2">Coming Soon</span>
           <h3 class="h-15 mb-20 mt-20">Event Management</h3>
           <p class="p-1 max-width-500 mb-40">
-           Effortlessly create and organize events, set access controls to manage attendance, and sell tickets directly through the platform. Whether you're hosting a small gathering or a large community event, our streamlined tools make it simple to coordinate every detail, track registrations, and ensure smooth entry for all attendees.
+           Effortlessly create and organize events, set access controls to manage attendance, and sell tickets directly through the platform.  You can also display and sell merchandise such as asọ-ẹbí right from Clannit.  Whether you're hosting a small gathering or a large community event, our streamlined tools make it simple to coordinate every detail, track registrations, and ensure smooth entry for all attendees.
           </p>
 
         </div>
