--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
       h5 {
         font-size: 18px;
         color: #333333;
-        margin-bottom: 10px;
+        margin-bottom: 6px;
+      }
+      h6 {
+        font-size: 15px;
+        color: #333333;
+        margin-bottom: 6px;
       }
       ul {
         padding-left: 20px;
@@ -67,7 +72,6 @@
         font-size: 14px;
         color: #888888;
         padding-top: 20px;
-        border-top: 1px solid #eeeeee;
       }
 
       .margin-0 {
@@ -85,6 +89,23 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 21px;
+      }
+
+      .image-container {
+        width: 100%;
+        max-width: 600px;
+        margin: 0 auto;
+      }
+      .image-cell {
+        width: 50%;
+        padding: 5px;
+      }
+      .image-cell img {
+        /* width: 100%; */
+        height: auto;
+
+        width: 135.74px;
+        /* height: 40px; */
       }
 
       /* Responsive styling */
@@ -117,51 +138,62 @@
 
       <!-- Main content -->
       <div class="main-body">
-        <h3>Experience the Future with Clannit 5.0 – Join Our Beta Test!</h3>
+        <h3>Welcome to Clannit 5.0 Beta Testing!</h3>
         <p>Hey Martha,</p>
         <p>
-          Get ready for Clannit 5.0 - a whole new level of connection,
-          convenience, and control! This exciting update is packed with updates
-          to guest invitation as well as new, powerful features like Event
-          Management and Vendor Listing, all wrapped in a sleek, intuitive
-          design.
-        </p>
-        <p>
-          As one of our valued users, we invite you to be among the first to
-          explore Clannit 5.0. Your feedback will play a crucial role in
-          refining the final version and making sure Clannit 5.0 is everything
-          you need.
+          Thank you for joining the Clannit 5.0 Beta Testing! We’re thrilled to
+          announce that Clannit 5.0 is now ready for Testing!
         </p>
 
-        <!-- Benefits list -->
-        <h5>As a beta tester, you will have the chance to:</h5>
+        <h5>Get Started:</h5>
+        <p style="margin-top: 6px">Download Clannit 5.0 Beta here</p>
+
+        <table
+          class="image-container"
+          cellpadding="0"
+          cellspacing="0"
+          border="0"
+        >
+          <tr>
+            <td class="image-cell">
+              <img src="immg.jpeg" alt="Image 1" />
+              <img src="immgg.jpeg" alt="Image 2" />
+            </td>
+            <!-- <td class="image-cell">
+              <img src="immgg.jpeg" alt="Image 2" />
+            </td> -->
+          </tr>
+        </table>
+
+        <!-- What to expect -->
+        <h6>What to Expect:</h6>
+        <p>
+          This beta introduces a modern user-friendly interface, new features,
+          and enhancements to familiar ones. New features will be released
+          weekly. For more details on what’s coming, visit
+          <a href="http://www.clannit.com/5.0-Beta/">
+            (http://www.clannit.com/5.0-Beta/)
+          </a>
+        </p>
+        <p>
+          To provide you with a test environment, we have added you to the Beta
+          Test 5.0 Estate
+        </p>
+
+        <!-- How you can help -->
+        <h6>How You Can Help:</h6>
         <ul>
+          <li>⁠Explore various features in the app.</li>
           <li>
-            Experience new features: Get early access to our upcoming features
-            before it’s officially released.
+            Use the in-app feedback form to report issues or share suggestions.
           </li>
-          <li>
-            Provide valuable feedback: Share your insights and help us improve
-            the user experience.
-          </li>
-          <li>
-            Connect with our team: Engage with our developers and share your
-            thoughts directly.
-          </li>
+          <li>⁠Let us know any ideas for improvement!</li>
         </ul>
 
-        <p>
-          If you're interested, please click on the button below to find out
-          more and express your interest.
-        </p>
+        <p>Thank you for being a vital part of Clannit’s growth!</p>
 
         <p class="margin-0">Best regards,</p>
         <p class="margin-0">The Clannit Team</p>
-
-        <!-- Call to action button -->
-        <a href="https://clannit.com/beta-test" class="button"
-          >I’m Interested</a
-        >
 
         <!-- Footer -->
         <div class="footer">
