fix: store links

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
           </p>
 
           <div class="hero-icons">
-             <a href="'#" class="hero-icon">
+             <a href="'#" class="hero-icon" target="_blank">
               <img src="./assets/playstore.svg" alt="" />
               <h5 class="h-17">Download on Playstore</h5>
             </a>
-            <a href="#" class="hero-icon">
+            <a href="#" class="hero-icon" target="_blank">
                <img src="./assets/apple.svg" alt="" />
                <h5 class="h-17">Download on Appstore</h5>
             </a>      
@@ -336,11 +336,11 @@
           <h5 class="h-18">Clannit Beta Test is Live!</h5>
           <p class="p-8 text-center max-width-888 mt-20">Click below to download the app now and start exploring! Over the next few weeks, you'll have exclusive access to our beta features and new functionalities. Your feedback will directly impact the platform's development and help shape the future of Clannit.</p>
           <div class="hero-icons mt-50">
-             <a href="#" class="hero-icon">
+             <a href="#" class="hero-icon" target="_blank">
               <img src="./assets/playstore.svg" alt="" />
               <h5 class="h-17">Download on Playstore</h5>
             </a>
-            <a href="#" class="hero-icon">
+            <a href="#" class="hero-icon" target="_blank">
                <img src="./assets/apple.svg" alt="" />
                <h5 class="h-17">Download on Appstore</h5>
             </a>      
