--- a/index.html
+++ b/index.html
@@ -138,46 +138,29 @@
 
       <!-- Main content -->
       <div class="main-body">
-        <h3>Welcome to Clannit 5.0 Beta Testing!</h3>
-        <p>Hey Martha,</p>
+        <p>28 November 2024</p>
+
+        <p style="margin-top: 50px">Hey Martha,</p>
+        <h3>Clannit 5.0 is ready for Beta Testing!</h3>
+
         <p>
-          Thank you for joining the Clannit 5.0 Beta Testing! We’re thrilled to
-          announce that Clannit 5.0 is now ready for Testing!
+          Thank you for indicating your interest to join the Clannit 5.0 Beta
+          Testing! We’re thrilled to announce that Clannit 5.0 is now ready for
+          Testing!
         </p>
 
         <h5>Get Started:</h5>
-        <p style="margin-top: 6px">Download Clannit 5.0 Beta here</p>
-
-        <table
-          class="image-container"
-          cellpadding="0"
-          cellspacing="0"
-          border="0"
-        >
-          <tr>
-            <td class="image-cell">
-              <img src="immg.jpeg" alt="Image 1" />
-              <img src="immgg.jpeg" alt="Image 2" />
-            </td>
-            <!-- <td class="image-cell">
-              <img src="immgg.jpeg" alt="Image 2" />
-            </td> -->
-          </tr>
-        </table>
+        <p style="margin-top: 6px">
+          Please visit <a href="#">https://clannit.com/beta/home/</a> for a
+          step-by-step guide on how to download the beta test version.
+        </p>
 
         <!-- What to expect -->
         <h6>What to Expect:</h6>
         <p>
-          This beta introduces a modern user-friendly interface, new features,
-          and enhancements to familiar ones. New features will be released
-          weekly. For more details on what’s coming, visit
-          <a href="http://www.clannit.com/5.0-Beta/">
-            (http://www.clannit.com/5.0-Beta/)
-          </a>
-        </p>
-        <p>
-          To provide you with a test environment, we have added you to the Beta
-          Test 5.0 Estate
+          This beta version introduces a modern user-friendly interface, new
+          features, and enhancements to familiar ones. Additional new features
+          and fixes will be released for testing weekly.
         </p>
 
         <!-- How you can help -->
@@ -190,21 +173,15 @@
           <li>⁠Let us know any ideas for improvement!</li>
         </ul>
 
-        <p>Thank you for being a vital part of Clannit’s growth!</p>
+        <p>
+          Thank you for being a vital part of Clannit’s growth and we look
+          forward to your bright suggestions for Clannit!
+        </p>
 
-        <p class="margin-0">Best regards,</p>
-        <p class="margin-0">The Clannit Team</p>
+        <p class="margin-0" style="margin-top: 70px">Kind regards,</p>
+        <p class="margin-0"><b>Clannit Team</b></p>
 
         <!-- Footer -->
-        <div class="footer">
-          <!-- Optional footer image -->
-          <img
-            src="./email-img.png"
-            alt="Footer Image"
-            width="100%"
-            style="margin-top: 20px; border-radius: 0 0 8px 8px"
-          />
-        </div>
       </div>
     </div>
   </body>
